Fix scrollbar bug

--- a/src/app/team-dashboard/container/team-container.component.css
+++ b/src/app/team-dashboard/container/team-container.component.css
@@ -2,6 +2,8 @@
   border: 5px solid;
   border-radius: 10px;
   padding: 14px;
+
   height:100%;
   width: auto;
+  overflow-y: auto;
 }
